<resources>
    <string name="app_name">MoodTap</string>
    <string name="texto_bem_vindo">SEJA BEM VINDO AO MOODTAP!</string>
    <string name="texto_botao_continuar">CONTINUAR</string>
    <string name="texto_logo">Logo do MoodTap</string>
    <string name="texto_como_se_sente">Como você está se sentindo?</string>
    <string name="texto_botao_feliz">Emoji Feliz</string>
    <string name="texto_botao_love">Emoji Apaixonado</string>
    <string name="texto_botao_neutro">Emoji Neutro</string>
    <string name="texto_botao_triste">Emoji Triste</string>
    <string name="texto_botao_bravo">Emoji Bravo</string>
    <string name="texto_botao_medo">Emoji com Medo</string>
    <string name="texto_historico">Histórico</string>
    <string name="texto_seu_historico">Seu Histórico de emoções:</string>
    <string name="texto_voltar">Voltar</string>
</resources>